--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,28 @@ html {
 body {
   font-family: ' Inter ', sans-serif;
   line-height: 1.6;
+  margin: 25px;
+  padding: 25px;
 }
 
-h1,
-h2,
+h1{
+  font-size: 30px;
+  color:#c30052;
+}
+h2{
+  font-size: 25px ;
+  color: #333;
+  text-align: center;
+  margin: auto;
+}
 p {
-  margin: 0;
-  padding: 0;
+  font-size: 1.3rem;
+  color: lightgray;
+}
+
+h3{
+  font-size: 1.5rem;
+  color: #fff;
 }
 
 .container {
@@ -24,12 +39,24 @@ p {
   border-radius: 0.7rem;
   box-shadow: 0.3rem 0.3rem 1.5rem rgba(0, 0, 0, 0.15);
   min-width: 25rem;
+  padding: 15px;
+  margin: 20px;
 }
 
 .card-horizontal {
-  border-radius: 0.7rem;
-  box-shadow: 0.3rem 0.3rem 1.5rem rgba(0, 0, 0, 0.15);
-  max-width: 32rem;
+  padding: 10px;
+  margin: 15px;
+  border-radius: 0.8rem;
+
+}
+.card--wind{
+  background:linear-gradient(90deg, #d53369 0%, #daae51 100%);
+}
+.card--ice{
+  background: linear-gradient(90deg, #0700b8 0%, #00ff88 100%);
+}
+.card--flame{
+   background:linear-gradient(90deg, #f8ff00 0%, #3ad59f 100%);
 }
 
 .box {
@@ -37,6 +64,15 @@ p {
   min-height: 20rem;
   border-radius: 0.7rem;
   box-shadow: 0.3rem 0.3rem 1.5rem rgba(0, 0, 0, 0.15);
+}
+.box--wind{
+  background:linear-gradient(90deg, #d53369 0%, #daae51 100%);
+}
+.box--ice{
+  background:linear-gradient(90deg, #0700b8 0%, #00ff88 100%);
+}
+.box--flame{
+   background:linear-gradient(90deg, #f8ff00 0%, #3ad59f 100%);
 }
 
 hr {
@@ -49,6 +85,22 @@ button {
   box-shadow: 0.3rem 0.3rem 1rem rgba(0, 0, 0, 0.444);
   cursor: pointer;
   display: block;
+  margin: auto;
+  padding: 12px;
+  padding-right: 25px;
+  padding-left: 25px;
+  color: #fff;
+  font-size: 15px; 
+}
+.button--wind{
+  background:linear-gradient(90deg, #d53369 0%, #daae51 100%);
+  
+}
+.button--ice{
+  background:linear-gradient(90deg, #0700b8 0%, #00ff88 100%);
+}
+.button--flame{
+  background:linear-gradient(90deg, #f8ff00 0%, #3ad59f 100%);
 }
 
 .wrapper {
